--- a/it161/it161/index.html
+++ b/it161/it161/index.html
@@ -10,7 +10,7 @@
  </head>
  <body>
      <header>
-     <h1 class="page-header">YOUR NAME GOES HERE</h1>
+     <h1 class="page-header">Toghrul Jafarov</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="elements.html" target="_blank">HTML Elements</a>
@@ -47,7 +47,7 @@
     <p>The mobile navigation originates from <a href="https://www.w3schools.com/howto/howto_js_mobile_navbar.asp" target="_blank">W3Schools</a></p>
     <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+          Toghrul Jafarov, All Rights Reserved ~ 
           <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
           <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
      </p>
