--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -15,6 +15,7 @@
             <a href="index.html">Home</a>
             <a href="elements.html" target="_blank">HTML Elements</a>
             <a href="stylin.html" target="_blank">Stylin' with CSS</a>
+            <a href="aia.html" target="_blank">Audience, Issues and Approach</a>
             <a href="#" target="_blank">link</a>
             <a href="#" target="_blank">link</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
