--- a/it161/it161/index.html
+++ b/it161/it161/index.html
@@ -15,12 +15,38 @@
             <a href="index.html">Home</a>
             <a href="elements.html" target="_blank">HTML Elements</a>
             <a href="stylin.html" target="_blank">Stylin' with CSS</a>
+            <a href="aia.html" target="_blank">Audience, Issues and Approach</a>
             <a href="#" target="_blank">link</a>
             <a href="#" target="_blank">link</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
-     
+     <section>
+      <h2 class="pageID">Audience, Issues and Approach</h2>
+      <table>
+       <tr>
+        <td>R1C1</td>
+        <td>R1C2</td>
+       </tr>
+       <tr>
+        <td>R2C1</td>
+        <td>R1C2</td>
+       </tr>
+       <tr>
+        <td>R3C1</td>
+        <td>R1C2</td>
+       </tr>
+       <tr>
+        <td>R4C1</td>
+        <td>R1C2</td>
+       </tr>
+       <tr>
+        <td>R5C1</td>
+        <td>R1C2</td>
+       </tr>
+      </table>
+     </section>
+  
    <main class="wrapper">
     <picture class="profile">
       <source media="(min-width: 1200px)" srcset="images/desktop.jpg">
