--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -23,7 +23,7 @@
      </header>
      <section>
       <h2 class="pageID">Audience, Issues and Approach</h2>
-      <table>
+      <table class="client">
           <tr>
                  <th>R1C1</th>
                  <th>R1C2</th>
@@ -43,6 +43,29 @@
           <tr>
                  <td>R5C1</td>
                  <td>R5C2</td>
+          </tr>
+      </table>
+   
+      <table class="audience">
+          <tr>
+                 <th>R1C1</th>
+                 <th>R1C2</th>
+                 <th>R1C3</th>
+          </tr>
+          <tr>
+                 <td>R2C1</td>
+                 <td>R2C2</td>
+                 <td>R2C3</td>
+          </tr>
+          <tr>
+                 <td>R3C1</td>
+                 <td>R3C2</td>
+                 <td>R3C3</td>
+          </tr>
+          <tr>
+                 <td>R4C1</td>
+                 <td>R4C2</td>
+                 <td>R4C3</td>
           </tr>
       </table>
      </section>
