--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -26,12 +26,12 @@
       <h2 class="pageID">Audience, Issues and Approach</h2>
       <table class="client">
           <tr>
-                 <th>R1C1</th>
-                 <th>R1C2</th>
+                 <th>Client's name and the final decision maker</th>
+                 <th>Nurana</th>
           </tr>
           <tr>
-                 <td>R2C1</td>
-                 <td>R2C2</td>
+                 <td>Client's business (website) name</td>
+                 <td>"Nurana's Store"</td>
           </tr>
           <tr>
                  <td>R3C1</td>
