--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -34,16 +34,16 @@
                  <td>"Nurana's Store"</td>
           </tr>
           <tr>
-                 <td>R3C1</td>
-                 <td>R3C2</td>
+                 <td>Is this redesign or brand new website?</td>
+                 <td>Brand new website</td>
           </tr>
           <tr>
-                 <td>R4C1</td>
-                 <td>R4C2</td>
+                 <td>Type of website</td>
+                 <td>Shopping, Thrifting, Community</td>
           </tr>
           <tr>
-                 <td>R5C1</td>
-                 <td>R5C2</td>
+                 <td>Client's goal(s)</td>
+                 <td>Selling vintage items</td>
           </tr>
       </table>
    
