--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -49,14 +49,14 @@
    
       <table class="audience">
           <tr>
-                 <th>R1C1</th>
-                 <th>R1C2</th>
-                 <th>R1C3</th>
+                 <th>Audiences</th>
+                 <th>Issues</th>
+                 <th>Approach</th>
           </tr>
           <tr>
-                 <td>R2C1</td>
-                 <td>R2C2</td>
-                 <td>R2C3</td>
+                 <td>Vintage Lovers</td>
+                 <td>Environmentalists</td>
+                 <td>Middle Class</td>
           </tr>
           <tr>
                  <td>R3C1</td>
