--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -55,16 +55,16 @@
           </tr>
           <tr>
                  <td>Vintage Lovers</td>
-                 <td>Environmentalists</td>
+                 <td></td>
                  <td>Middle Class</td>
           </tr>
           <tr>
-                 <td>R3C1</td>
+                 <td>Environmentalists</td>
                  <td>R3C2</td>
                  <td>R3C3</td>
           </tr>
           <tr>
-                 <td>R4C1</td>
+                 <td>Middle-Low Class People</td>
                  <td>R4C2</td>
                  <td>R4C3</td>
           </tr>
