--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -60,7 +60,7 @@
           </tr>
           <tr>
                  <td>Environmentalists</td>
-                 <td>R3C2</td>
+                 <td>They prefer second hand items, because they do not want to support fast fashion</td>
                  <td>R3C3</td>
           </tr>
           <tr>
