--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -55,12 +55,22 @@
           </tr>
           <tr>
                  <td>Vintage Lovers</td>
-                 <td>R2C2</td>
+                 <td>
+                 <ul>
+                  <li>They want to buy vintage items that have some histories</li>
+                  <li>They have some aesthetic expectations from items</li>
+                 </ul>
+                 </td>
                  <td>R2C3</td>
           </tr>
           <tr>
                  <td>Environmentalists</td>
-                 <td>They prefer second hand items, because they do not want to support fast fashion</td>
+                 <td>
+                 <ul>
+                  <li>They prefer second hand items, because they do not want to support fast fashion</li>
+                  <li>They are careful about environment</li>
+                 </ul>
+                 </td>
                  <td>R3C3</td>
           </tr>
           <tr>
