--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -75,7 +75,12 @@
           </tr>
           <tr>
                  <td>Middle-Low Class People</td>
-                 <td>R4C2</td>
+                 <td>
+                  <ul>
+                   <li>They are looking for items with more affordable prices</li>
+                   <li>They prefer to buy more quality thrift items with more affordable prices </li>
+                  </ul>
+                 </td>
                  <td>R4C3</td>
           </tr>
       </table>
