--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -61,7 +61,7 @@
                   <li>They have some aesthetic expectations from items</li>
                  </ul>
                  </td>
-                 <td>R2C3</td>
+                 <td>Provide very beaatiful looking vintage items and tell their stories</td>
           </tr>
           <tr>
                  <td>Environmentalists</td>
@@ -71,17 +71,25 @@
                   <li>They are careful about environment</li>
                  </ul>
                  </td>
-                 <td>R3C3</td>
+                 <td>
+                  <ul>
+                   <li>Provide vintage items and mention importance of thrifting for the environment</li>
+                  </ul>
+                 </td>
           </tr>
           <tr>
                  <td>Middle-Low Class People</td>
                  <td>
                   <ul>
                    <li>They are looking for items with more affordable prices</li>
-                   <li>They prefer to buy more quality thrift items with more affordable prices </li>
+                   <li>They prefer to buy more quality thrift items with more affordable prices instead of brand new expensive items</li>
                   </ul>
                  </td>
-                 <td>R4C3</td>
+                 <td>
+                  <ul>
+                   <li>Provide items with more affordable but good quality and in great condition</li>
+                  </ul>
+                 </td>
           </tr>
       </table>
      </section>
