--- a/it161/it161/aia.html
+++ b/it161/it161/aia.html
@@ -61,7 +61,11 @@
                   <li>They have some aesthetic expectations from items</li>
                  </ul>
                  </td>
-                 <td>Provide very beaatiful looking vintage items and tell their stories</td>
+                 <td>
+                  <ul>
+                   <li>Provide very beaatiful looking vintage items and tell their stories</li>
+                  </ul>
+                 </td>
           </tr>
           <tr>
                  <td>Environmentalists</td>
