--- a/it161/fp/template.html
+++ b/it161/fp/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Positioning</title>
+     <title>Nurana's Store</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -11,7 +11,7 @@
  </head>
  <body>
      <header>
-     <h1 class="page-header">Positioning</h1>
+     <h1 class="page-header">Nurana's Store</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="#">Link</a>
@@ -22,7 +22,7 @@
      
    <main class="wrapper">
  
-    <h2 class="subheader">Positioning Lesson Plan</h2>
+    <h2 class="subheader">Welcome Dear Costumer</h2>
    <div class="my-row">
    <div class="my-column" style="background-color:#aaa;">
        <h2>Column 1</h2>
