--- a/it161/fp/template.html
+++ b/it161/fp/template.html
@@ -33,7 +33,7 @@
        <p>From <a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_two_columns_responsive" target="_blank">W3Schools</a></p>
        <div class="flexible">
          <div style="max-width:300px">
-             <img src="https://picsum.photos/id/237/536/354" />
+             <img src="images/glasslamp.jpg"/>
          </div>
        </div>
    </div>
@@ -42,7 +42,7 @@
        <p>Right column desktop, stacks in mobile</p>
        <div class="flexible">
          <div style="max-width:400px">
-           <img src="https://picsum.photos/id/1074/536/354" />
+           <img src="images/chromelamp.jpg" />
        </div>
       </div>
       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
