--- a/it161/fp/template.html
+++ b/it161/fp/template.html
@@ -28,7 +28,7 @@
     <h2 class="subheader">Welcome Dear Costumer</h2>
    <div class="my-row">
    <div class="my-column" style="background-color:#aaa;">
-       <h2>Column 1</h2>
+       <h2>Vintage Glass Table Lamp</h2>
        <p>Left column desktop, stacks in mobile</p>
        <p>From <a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_two_columns_responsive" target="_blank">W3Schools</a></p>
        <div class="flexible">
@@ -36,16 +36,17 @@
              <img src="images/glasslamp.jpg"/>
          </div>
        </div>
+       <p>Gorgeous Vintage Glass Table Lamp that can make your home more cozy</p>
    </div>
    <div class="my-column" style="background-color:#bbb;">
-       <h2>Column 2</h2>
+       <h2>Vintage Chrome Base Table Lamp</h2>
        <p>Right column desktop, stacks in mobile</p>
        <div class="flexible">
          <div style="max-width:400px">
            <img src="images/chromelamp.jpg" />
        </div>
       </div>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+      <p>Beautiful Vintage Chrome Table Lamp that can make your home more cozy</p>
    </div>
 </div>
     
